# raytracer-optimisation

./: CMakeLists.txt
src/raymath/: Vector3.cpp
src/rayscene/: Camera.cpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
test/: CMakeLists.txt  test_raytracer.cpp
